# connectal

./: .gitignore  .travis.yml  AST.py  Doxyfile  LICENSE.txt  Makefile  Makefile.build  Makefile.common  Makefile.connectal  Makefile.version  Makefile.xbsv  README-pcie.md  README.md  ReadmePartialReconfiguration.md  bluespec-pcie.patch  bsvgen.py  cppgen.py  evalexpr.py  genctypes.py  generate_verilog.py  genstubs.py  genxpsprojfrombsv  ic_wrapper.patch  newrt.py  run_test.sh  syntax.g  syntax.py  updatepao  updatepao.sh  util.py  valuemap.py  xbsvgen  xpsgen.py  xstgen.py
boardinfo/: ac701.json  ac701_untethered.json  ac701g2.json  asic.json  awsf1.json  bluesim.json  cvc.json  de5.json  htg4.json  kc160g2.json  kc705.json  kc705_untethered.json  kc705g1.json  kc705g2.json  kcu105.json  miniitx100.json  ncverilog.json  netfpgasume.json  nfsume.json  parallella.json  ultra96.json  v2000t.json  vc707.json  vc707g2.json  vc709.json  vcs.json  vcu108.json  vcu118.json  verilator.json  vsim.json  xsim.json  zc702.json  zc706.json  zc706_ubuntu.json  zcu102.json  zcu111.json  zedboard.json  zedboard_ubuntu.json  zybo.json  zynq100.json
bootfile/: clearreg.S  make_zcomposite.sh  zynq_fsbl.elf  zynq_linux_boot.lds
bsv/: Adapter.bsv  AddressGenerator.bsv  AsicTop.bsv  AvalonBits.bsv  AvalonDdr3Controller.bsv  AvalonDma.bsv  AvalonGather.bsv  AvalonMasterSlave.bsv  AvalonSplitter.bsv  AwsF1Top.bsv  Axi4MasterSlave.bsv  AxiBits.bsv  AxiClientServer.bsv  AxiCsr.bsv  AxiDMA.bsv  AxiDdr3Controller.bsv  AxiDma.bsv  AxiDrain.bsv  AxiGather.bsv  AxiMasterEngine.bsv  AxiMasterSlave.bsv  AxiRDMA.bsv  AxiSDMA.bsv  AxiSlave.bsv  AxiSlaveEngine.bsv  AxiStream.bsv  BRAMFIFOFLevel.bsv  BlueScope.bsv  BnocPortal.bsv  BpiFlash.bsv  BramMux.bsv  Bscan.bsv  BsimDMA.bsv  BsimHostTypeIF.bsv  BsimLink.bsv  BsimRDMA.bsv  BsimSDMA.bsv  BsimTop.bsv  BsimTopPcie.bsv  CFFIFO.bsv  (+168 more)
busdefs/: define_ddr.py  define_hdmi.py  define_imageon.py  define_leds.py  define_xadc.py
consolable/: Makefile  checkip.c  consolable.c
cpp/: Application.mk  BsimCtrl.cpp  BsimCtrl.cxx  BsimDMA.cxx  BsimDma.cpp  BsimDma.cxx  BsimTop.cxx  Directory.h  DmaBuffer.cpp  DmaBuffer.h  DmaConfigProxy.h  MMUConfigServer.h  MMUServer.h  PortalMemory.cpp  PortalMemory.h  StdDMAIndication.h  StdDmaDbgIndication.h  StdDmaIndication.h  TlpReplay.cpp  TlpReplay.cxx  XsimTop.cpp  XsimTop.h  bluesim_main.cxx  bsim_relay.c  dmaManager.c  dmaManager.cpp  dmaManager.h  dmaSendFd.c  (+49 more)
examples/testmm/: CMakeLists.txt  Makefile  Makefile.dbn  Matrix.bsv  Top.bsv  design-vc707.tcl  design.tcl  mkZynqTop_flpn.xdc  synth-ip.tcl  testmm.cpp
examples/testmm/bsv/: DmaVector.bsv  DotProdServer.bsv  FloatOps.bsv  FpMacTb.bsv  Matrix.bsv  MatrixInterleaved.bsv  MatrixNT.bsv  MatrixTN.bsv  Rbm.bsv  RbmTypes.bsv  Sigmoid.bsv
examples/testmm/cpp/: portalmat.cpp  portalmat.h  rbm.cpp  rbm.h  testrbm.cpp
examples/testmm/scripts/: build.sh  build_opencv.sh
(+1811 files in other folders)
